src/objects/VenueTicketAgency__c.object
<CustomObject>
    <description>Junction object linking venues with ticket agencies, indicating that ticket agency may manage ticketing at the venue</description>
    <fields>
        <fullName>Agency_Venue_ID__c</fullName>
        <label>Agency Venue ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncludeinNewEvents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in New Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TicketAgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ticket Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ticket Agency Venues</relationshipLabel>
        <relationshipName>TicketAgencyVenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VenueCodeMask__c</fullName>
        <label>Venue Code Mask</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VenueDefaultAgencySystem__c</fullName>
        <label>Venue Default Agency System</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Venue Ticket Agencies</relationshipLabel>
        <relationshipName>VenueTicketAgencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Venue-Ticket Agency</label>
    <nameField>
        <displayFormat>VTA-{000000}</displayFormat>
        <label>Venue-Ticket Agency ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Venue-Ticket Agencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>